# widgetron

./: .gitignore  CONTRIBUTING.md  INSTRUCTIONS.md  LICENSE  README.md  README.rst  dodo.py  environment.yaml  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  codeql.yml
example/: README.md  my_notebook.ipynb
example/my_package/: my_module.py
examples/: Presentation.ipynb
examples/minesweeper/: LICENSE  Minesweeper.ipynb  README.md  environment.yaml  pyproject.toml
examples/multiple_notebooks/: README.md
examples/single_notebook/: README.md  environment.yml  my_notebook.ipynb  post_install.bat  post_install.sh  pyproject.toml  setup.cfg_syntax  shell_commands.txt
recipe/: meta.yaml
src/: README.rst  setup.cfg
src/widgetron/: __main__.py  args.yml  constants.py  globals.py  jinja_functions.py  parse_args.py  utils.py
src/widgetron/icons/: widgetron.icns
src/widgetron/spec_resolution/: spec.py
src/widgetron/templates/: condarc.yml_template
src/widgetron/templates/constructor/: construct.yaml  construct.yaml_template  post_install.sh_template
src/widgetron/templates/constructor/Menu/: widgetron_shortcut.json_template
src/widgetron/templates/electron/: index.html_template  main.js  main.js_template  package.json_template
src/widgetron/templates/recipe/: bld.bat  bld.bat_template  build.sh_template  meta.yaml  meta.yaml_template  recipe.yaml_template  widgetron_shortcut.json_template
src/widgetron/templates/server/: LICENSE.txt_template  README.md_template  pyproject.toml_template  setup.cfg  setup.cfg_template
src/widgetron/templates/server/widgetron_app/: __main__.py_template  cli.py_template
src/widgetron/templates/server/widgetron_app/notebooks/: debug.ipynb
src/widgetron/utils/: conda.py  jinja_functions.py  settings.py  shell.py
tests/: conftest.py  test_kwargs.py
(+6 files in other folders)
