[metadata]
name = widgetron
version = attr: widgetron.VERSION
author = Joel Stansbury
license = MIT
long_description_content_type = Markdown
long_description = file: README.md
description = Application builder for ipython notebooks
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
package_dir =
    = src
packages =
    widgetron
    widgetron.templates
    widgetron.icons
    widgetron.utils
install_requires =
    jinja2
    pyyaml
    constructor>=3.4.5
    boa>=0.15.1
    traitlets>=5

[options.package_data]
widgetron = args.yml
widgetron.templates = **
widgetron.icons = **

[options.entry_points]
    console_scripts = 
        widgetron = widgetron.__main__:cli

[tool.widgetron]
notebook = Untitled.ipynb
environment_yaml = environment.yml
python_source_dir = src/widgetron
server_command = ["jupyter", "lab", "--no-browser"]