[metadata]
name = widgetron
version = attr: widgetron.VERSION
description = Application builder for ipywidgets
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages =
    widgetron
    widgetron.templates

[options.package_data]
widgetron.templates = **

[options.entry_points]
    console_scripts = 
        widgetron = widgetron.__main__:cli