[metadata]
name = widgetron
version = attr: widgetron.VERSION
author = Joel Stansbury
license = MIT
long_description = file: README.md
description = Application builder for ipython notebooks
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages =
    widgetron
    widgetron.templates
install_requires =
    jinja2

[options.package_data]
widgetron.templates = **

[options.entry_points]
    console_scripts = 
        widgetron = widgetron.__main__:cli